# torch_perp

./: .gitignore  AGENTS.md  Anchor.toml  LICENSE  pnpm-lock.yaml  readme.md
docs/: design.md  sim.md  verification.md
programs/torch_perp/: Cargo.toml
programs/torch_perp/src/: constants.rs  contexts.rs  errors.rs  kani_proofs.rs  lib.rs  math.rs  pool.rs  state.rs
programs/torch_perp/src/handlers/: close_position.rs  deposit_collateral.rs  initialize_global_config.rs  initialize_market.rs  liquidate_position.rs  mod.rs  open_position.rs  partial_close_position.rs  update_funding.rs  withdraw_collateral.rs  write_observation.rs
sim/: torch_perp_sim.py
